test/runnable/imports/test41a.d
module imports.test41a;

int foo()
{
        assert(false, "GO");
}

public int func(T)()
{
        assert(false, "Blah");
}

